--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 spring.application.name=store
 spring.jpa.defer-datasource-initialization=true
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2
+spring.h2.console.enabled=false
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.hibernate.ddl-auto=create-drop
