enforce utf-8, refactor pager

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,9 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.open-in-view=false
+spring.web.encoding.charset=UTF-8
+spring.web.encoding.enabled=true
+spring.web.encoding.force=true
 
 # Only for the purpose of this example
 default.admin.password=admin
